Changed model, added images and dropped color

--- a/app/views/products/home_page.html.erb
+++ b/app/views/products/home_page.html.erb
@@ -3,5 +3,5 @@
 <p><%=  item.name %></p>
 <p><%=   item.description %></p>
 <p><%=   item.price %></p>
-<p><%=   item.color %></p>
+<p><%=   item.image %>"</p>
 <% end %>
