--- a/app/views/products/home_page.html.erb
+++ b/app/views/products/home_page.html.erb
@@ -3,5 +3,6 @@
 <p><%=  item.name %></p>
 <p><%=   item.description %></p>
 <p><%=   item.price %></p>
-<p><%=   item.image %>"</p>
+<p><img src="<%=   item.image %>"></p>
 <% end %>
+<div class="alert alert-success" role="alert">Hey, buy this bottle!</div>
